--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ Encoding: UTF-8
 Language: es
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+URL: https://github.com/FlukeAndFeather/seal
+BugReports: https://github.com/FlukeAndFeather/seal/issues
