--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,18 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/FlukeAndFeather/seal
 BugReports: https://github.com/FlukeAndFeather/seal/issues
+Suggests: 
+    aniMotum,
+    dplyr,
+    ggplot2,
+    here,
+    knitr,
+    rmarkdown,
+    tibble,
+    tidyr
+VignetteBuilder: quarto
+Imports: 
+    magrittr
+Depends: 
+    R (>= 3.5)
+LazyData: true
