--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,25 +7,25 @@ Authors@R:
 Description: A seal dive typing tool using a human-in-the loop, active
     learning paradigm with time series classification algorithms.
 License: MIT + file LICENSE
-Encoding: UTF-8
-Language: es
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
 URL: https://github.com/FlukeAndFeather/seal
 BugReports: https://github.com/FlukeAndFeather/seal/issues
-Suggests: 
-    aniMotum,
-    dplyr,
-    ggplot2,
-    here,
-    knitr,
-    rmarkdown,
-    tibble,
-    tidyr
-VignetteBuilder: quarto
-Imports: 
-    magrittr,
-    reticulate
 Depends: 
     R (>= 3.5)
+Imports: 
+    dplyr,
+    ggplot2,
+    magrittr,
+    reticulate,
+    tibble,
+    tidyr
+Suggests: 
+    aniMotum,
+    here,
+    knitr
+VignetteBuilder: 
+    quarto
+Encoding: UTF-8
+Language: es
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
